--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,8 +1,175 @@
 .footer {
     background-color: #000;
 
-    @media (max-width: $md) {
+    @media (max-width: 1200px) {
         display: none;
+    }
+
+    &--md {
+        display: none;
+        @media (max-width: 1200px) {
+            display: block;
+        }
+
+        @media (max-width: 760px) {
+            display: none;
+        }
+
+        .footer__inner {
+            display: flex;
+            justify-content: center;
+            gap: 32px;
+
+            padding: 38px;
+        }
+
+        .footer__content {
+        }
+
+        .footer__row {
+            display: flex;
+            gap: 19px;
+        }
+
+        .nav--footer {
+            display: block;
+        }
+
+        .footer__contacts {
+            padding: 0;
+
+            display: flex;
+            flex-direction: column;
+        }
+
+        .footer__docs {
+            display: flex;
+            max-width: 150px;
+        }
+        .footer__docs-group {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .footer__docs-links {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            font-size: 1rem;
+            line-height: 1.4;
+        }
+
+        .footer__subscribe-caption {
+            font-size: 2rem;
+            margin-bottom: 7px;
+        }
+
+        .form--subscribe-news {
+            width: 531px;
+
+            margin-bottom: 23px;
+        }
+    }
+
+    &--sm {
+        display: none;
+
+        @media (max-width: 760px) {
+            display: block;
+        }
+
+        .footer__inner {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            padding: 30px 15px;
+        }
+
+        .footer__row {
+            margin-bottom: 14px;
+        }
+
+        .footer__contacts {
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+
+            margin-bottom: 23px;
+        }
+
+        .contacts__data {
+            order: 2;
+        }
+
+        .contacts__address {
+            order: 1;
+        }
+
+        .contacts__item {
+            font-size: 1.6rem;
+        }
+
+        .footer__subscribe {
+        }
+
+        .footer__subscribe-caption {
+            display: none;
+        }
+
+        .form__input {
+            padding: 0 120px 0 14px !important;
+            max-width: 290px;
+            width: 100%;
+
+            height: 44px;
+
+            font-size: 1.4rem !important;
+        }
+
+        .form__btn {
+            max-width: 113px;
+            height: 44px;
+
+            font-size: 1.2rem !important;
+        }
+
+        .footer__row--special {
+            display: flex;
+        }
+
+        .footer__found-mistake {
+            margin-bottom: 10px;
+
+            font-size: 1.2rem;
+        }
+
+        .footer__docs-group {
+            max-width: 160px;
+        }
+
+        .footer__docs-icon {
+            width: 19px;
+            height: 19px;
+        }
+
+        .footer__docs-links {
+            font-size: 1.2rem;
+        }
+
+        .footer__warning {
+            font-size: 1.7rem;
+        }
+
+        .footer__to-top {
+            right: 15px;
+        }
+    }
+
+    @media (max-width: $md) {
+        // display: none;
     }
 
     &__inner {
