--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -5,14 +5,21 @@
     box-shadow: 0px 0px 1px rgba(49, 70, 124, 0.25),
         0px 0px 10px rgba(165, 172, 199, 0.4);
 
-    @media (max-width: 576px) {
+    @media (max-width: $md) {
         display: none;
     }
+
+    // &--md {
+    //     display: none;
+    //     @media (max-width: $md) {
+    //         display: block;
+    //     }
+    // }
 
     &--mobile {
         display: none;
 
-        @media (max-width: 576px) {
+        @media (max-width: $md) {
             display: block;
         }
 
