--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -140,7 +140,7 @@
 
             font-size: 3.6rem;
         }
-        @media (max-width: $lg) {
+        @media (max-width: 576px) {
             margin-bottom: 19px;
 
             font-size: 2.6rem;
