--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -75,3 +75,5 @@ a {
 @import 'components/product.scss';
 @import 'components/rating.scss';
 @import 'components/quantity.scss';
+@import 'components/tabs.scss';
+@import 'components/review.scss';
