--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -159,4 +159,71 @@
             border-radius: 0 4px 4px 0;
         }
     }
+
+    &--review {
+        min-width: 423px;
+
+        .form__title {
+            margin-bottom: 20px;
+
+            font-size: 3rem;
+            font-weight: 700;
+        }
+
+        .form__review {
+            margin-bottom: 23px;
+
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            span {
+                font-size: 1.6rem;
+            }
+        }
+
+        .form__input,
+        .form__textarea {
+            padding: 15px 26px;
+            margin-bottom: 20px;
+
+            font-family: $family;
+            letter-spacing: 0.1em;
+            color: $colors-font-main;
+            font-size: 1.6rem;
+
+            background-color: #fff;
+            border: 1px solid #dce7e9;
+            border-radius: 4px;
+        }
+        .form__input {
+            width: 100%;
+            height: 54px;
+            padding: 15px 26px;
+
+            &::placeholder {
+                color: #99a8aa;
+            }
+        }
+
+        .form__textarea {
+            resize: none;
+            width: 100%;
+            height: 179px;
+        }
+
+        .form__btn {
+            width: 100%;
+            height: 67px;
+
+            font-family: $family;
+            font-size: 2rem;
+            letter-spacing: 0.1em;
+            color: #fff;
+            text-transform: uppercase;
+
+            background-color: #8960e0;
+            border-radius: 4px;
+        }
+    }
 }
