--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -39,9 +39,63 @@
     }
 
     &__card {
+        display: flex;
+        gap: 68px;
     }
 
     &__card-image-block {
+        width: 651px;
+    }
+
+    &__card-image-block-wrapper {
+        position: relative;
+
+        max-width: 651px;
+        height: 651px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        background-color: #fff;
+
+        .label-wrapper {
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: 1;
+
+            display: flex;
+        }
+
+        .label {
+            width: 84px;
+            height: 42px;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            font-size: 2.4rem;
+            font-weight: 800;
+            text-transform: uppercase;
+
+            &--yellow {
+                background-color: #dbff00;
+                color: #000;
+            }
+
+            &--purple {
+                background-color: #8960e0;
+                color: #fff;
+            }
+        }
+
+        .btn-fullsize {
+            position: absolute;
+            bottom: 22px;
+            left: 22px;
+        }
     }
 
     &__card-text-block {
@@ -79,5 +133,224 @@
 
         font-size: 1.4rem;
         color: $colors-font-main;
+    }
+
+    &__card-controls {
+        margin-bottom: 44px;
+
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+
+        // btns
+        .btn {
+            height: 60px;
+
+            font-size: 1.6rem;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+
+            border-radius: 4px;
+        }
+        .add-to-cart {
+            width: 192px;
+
+            font-weight: 800;
+        }
+
+        .fast-order {
+            width: 240px;
+
+            color: #182d4d;
+
+            background-color: #f6feff;
+            border: 2px solid #182d4d;
+        }
+
+        .add-to-favorites {
+            width: 134px;
+
+            svg path {
+                stroke: #fff;
+            }
+        }
+    }
+
+    &__card-controls-row {
+        display: flex;
+        gap: 12px;
+    }
+
+    &__card-advantages {
+        margin-bottom: 43px;
+
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    &__card-advantages-item {
+        display: flex;
+        align-items: center;
+        gap: 9px;
+    }
+
+    &__card-advantages-icon {
+        width: 36px;
+        height: 36px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        background-color: #8960e0;
+        border-radius: 50%;
+
+        img {
+            display: block;
+            width: 20px;
+            height: 19px;
+        }
+    }
+
+    &__card-advantages-text {
+        font-size: 1.4rem;
+        line-height: 2.3;
+        letter-spacing: 0.08em;
+    }
+
+    &__card-services {
+        margin-bottom: 44px;
+
+        padding: 30px 36px;
+
+        display: flex;
+        flex-direction: column;
+
+        background-color: #f6feff;
+        border-radius: 6px;
+    }
+
+    &__card-services-item {
+        display: flex;
+        align-items: center;
+        gap: 17px;
+    }
+
+    &__card-services-text {
+        font-size: 1.4rem;
+        letter-spacing: 0.08em;
+        line-height: 2;
+
+        a {
+            text-decoration: underline;
+            color: #0c459a;
+        }
+    }
+
+    &__card-spec {
+        margin-bottom: 22px;
+    }
+
+    &__card-spec-caption {
+        margin-bottom: 18px;
+
+        font-size: 2.8rem;
+        line-height: 1.2;
+    }
+
+    &__card-spec-list {
+        margin-bottom: 22px;
+        display: flex;
+        flex-direction: column;
+        gap: 14px;
+    }
+
+    &__card-spec-item {
+        position: relative;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        font-size: 1.6rem;
+        letter-spacing: 0.08em;
+
+        &--special {
+            &::after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+                z-index: -1;
+
+                width: 100%;
+                height: 1px;
+                background-color: #96afb1;
+            }
+        }
+    }
+
+    &__card-spec-text {
+        background-color: #e9f3f4;
+    }
+    &__card-spec-dots {
+        position: absolute;
+        bottom: 3px;
+        left: 0;
+        right: 0;
+        z-index: -1;
+
+        margin: 0;
+        border: 0;
+        height: 2px;
+        display: block;
+        background-image: radial-gradient(
+            circle closest-side,
+            #b3b3b3 99%,
+            rgba(0, 0, 0, 0) 1%
+        );
+        background-position: bottom;
+        background-size: 6px 3px;
+        background-repeat: repeat-x;
+    }
+
+    &__card-spec-btn {
+        position: relative;
+        padding-right: 5px;
+        margin-right: auto;
+
+        font-size: 1.4rem;
+        letter-spacing: 0.08em;
+        color: $colors-font-main;
+
+        background-color: #e9f3f4;
+    }
+
+    &__card-spec-made {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        color: #96afb1;
+    }
+
+    &__card-spec-made-country {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+
+        span {
+            color: #182d4d;
+        }
+    }
+
+    &__card-spec-made-company {
+        span {
+            text-decoration: underline;
+            color: #182d4d;
+        }
     }
 }
