feat: add adaptive for product page

--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -56,16 +56,23 @@
 
     &--category {
         padding: 11px 22px;
+        height: 40px;
 
         font-size: 1.6rem;
         font-weight: 600;
         letter-spacing: 0.05em;
         color: #e9f3f4;
+        white-space: nowrap;
 
         background-color: #96afb1;
         border-radius: 4px;
 
         transition: 0.3s linear;
+
+        @media (max-width: 999px) {
+            font-size: 1.4rem;
+            height: 30px;
+        }
 
         &:hover,
         &.active {
