--- a/src/scss/components/tabs.scss
+++ b/src/scss/components/tabs.scss
@@ -1,6 +1,10 @@
 .tabs {
     margin-bottom: 55px;
 
+    @media (max-width: 999px) {
+        margin-bottom: 40px;
+    }
+
     &__header {
         display: flex;
     }
@@ -23,6 +27,13 @@
         border-radius: 4px 4px 0 0;
 
         transition: 0.3s linear;
+
+        @media (max-width: 999px) {
+            font-size: 1.4rem;
+        }
+        @media (max-width: 576px) {
+            font-size: 1.2rem;
+        }
 
         &.active {
             font-weight: 700;
@@ -48,6 +59,18 @@
 
         background-color: #f6feff;
 
+        @media (max-width: 999px) {
+            padding: 31px 34px;
+            gap: 60px;
+        }
+        @media (max-width: $md) {
+            flex-direction: column;
+        }
+
+        @media (max-width: 576px) {
+            padding: 18px;
+        }
+
         &.active {
             display: flex;
         }
@@ -58,12 +81,23 @@
 
         font-size: 3rem;
         font-weight: 700;
+
+        @media (max-width: 999px) {
+            font-size: 2.4rem;
+        }
+        @media (max-width: 576px) {
+            font-size: 1.8rem;
+        }
     }
 
     &__content-item-text {
         font-size: 1.6rem;
         line-height: 2;
         margin-bottom: 34px;
+
+        @media (max-width: 999px) {
+            font-size: 1.4rem;
+        }
     }
 
     &__content-item-list {
@@ -72,6 +106,10 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+
+        @media (max-width: 999px) {
+            padding-left: 0;
+        }
     }
 
     &__content-item-list-item {
@@ -80,5 +118,9 @@
         display: flex;
         align-items: center;
         gap: 19px;
+
+        @media (max-width: 999px) {
+            font-size: 1.4rem;
+        }
     }
 }
