--- a/src/scss/components/breadcrumbs.scss
+++ b/src/scss/components/breadcrumbs.scss
@@ -7,6 +7,10 @@
         font-size: 1.4rem;
         letter-spacing: 0.05em;
         color: #96afb1;
+
+        @media (max-width: 999px) {
+            font-size: 1.2rem;
+        }
     }
 
     &__item + &__item:before {
