--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -215,13 +215,68 @@
     &--recommendations {
         min-height: auto;
         max-width: 200px;
+
+        &.reload {
+            width: 100%;
+            .card__title {
+                color: #96afb1;
+                font-size: 1.8rem;
+                text-transform: uppercase;
+
+                overflow: visible;
+            }
+
+            .card__text-wrapper {
+                padding-left: 64px;
+            }
+        }
+
+        @media (max-width: 999px) {
+            max-width: 100px;
+        }
+
+        @media (max-width: 576px) {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding: 14px 21px 14px 12px;
+            margin-bottom: 12px;
+
+            max-width: 100%;
+
+            background-color: #fff;
+            border-radius: 6px;
+        }
+
         .card__image-wrapper {
             position: relative;
 
             max-width: 200px;
             height: 199px;
 
+            padding: 17px 10px;
+
             margin-bottom: 12px;
+
+            @media (max-width: 999px) {
+                max-width: 100px;
+                height: 105px;
+            }
+            img {
+                @media (max-width: 999px) {
+                    max-width: 79px;
+                    max-height: 71px;
+                }
+            }
+        }
+
+        // for recommendation on small devices
+        .card__image {
+            width: 55px;
+            max-height: 60px;
+
+            margin-right: 9px;
         }
 
         .card__image-label {
@@ -238,13 +293,56 @@
             justify-content: center;
 
             background-color: #dbff00;
+
+            @media (max-width: 576px) {
+                position: static;
+                background-color: #000;
+                border-radius: 4px;
+
+                svg {
+                    width: 29px;
+                    height: 29px;
+
+                    path {
+                        stroke: #dbff00;
+                    }
+                }
+            }
+        }
+
+        .card__text-wrapper {
+            max-width: 132px;
+            margin-right: 15px;
+
+            @media (max-width: 576px) {
+                margin-right: auto;
+            }
         }
 
         .card__title {
             margin-bottom: 8px;
 
             font-size: 1.8rem;
+            font-weight: 400;
             line-height: 1.2;
+
+            @media (max-width: 999px) {
+                font-size: 1.3rem;
+            }
+
+            @media (max-width: 576px) {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -moz-box;
+                -moz-box-orient: vertical;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                line-clamp: 2;
+                box-orient: vertical;
+
+                font-size: 1.4rem;
+            }
         }
 
         .card__price {
