--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -161,7 +161,7 @@
     }
 
     &--review {
-        min-width: 423px;
+        flex-basis: 40%;
 
         .form__title {
             margin-bottom: 20px;
@@ -195,11 +195,22 @@
             background-color: #fff;
             border: 1px solid #dce7e9;
             border-radius: 4px;
+
+            @media (max-width: 999px) {
+                margin-bottom: 10px;
+            }
         }
         .form__input {
             width: 100%;
             height: 54px;
             padding: 15px 26px;
+
+            @media (max-width: 999px) {
+                height: 23px;
+            }
+            @media (max-width: 576px) {
+                height: 48px;
+            }
 
             &::placeholder {
                 color: #99a8aa;
@@ -210,6 +221,13 @@
             resize: none;
             width: 100%;
             height: 179px;
+
+            @media (max-width: 999px) {
+                height: 90px;
+            }
+            @media (max-width: 576px) {
+                height: 137px;
+            }
         }
 
         .form__btn {
@@ -224,6 +242,13 @@
 
             background-color: #8960e0;
             border-radius: 4px;
+
+            @media (max-width: 999px) {
+                height: 33px;
+            }
+            @media (max-width: 576px) {
+                height: 48px;
+            }
         }
     }
 }
