--- a/src/scss/components/review.scss
+++ b/src/scss/components/review.scss
@@ -1,20 +1,52 @@
 .review {
+    flex-basis: 60%;
+
     &__list {
         display: flex;
         flex-direction: column;
         gap: 39px;
 
         margin-bottom: 64px;
+
+        @media (max-width: 999px) {
+            gap: 32px;
+            margin-bottom: 24px;
+        }
+        @media (max-width: 576px) {
+            gap: 10px;
+            margin-bottom: 17px;
+        }
     }
 
     &__item {
     }
 
     &__item-header {
+        position: relative;
         margin-bottom: 17px;
 
         display: flex;
         justify-content: space-between;
+        align-items: center;
+
+        @media (max-width: 576px) {
+            flex-direction: column;
+            align-items: flex-start;
+
+            .review__item-name {
+                order: 1;
+            }
+
+            .rating {
+                order: 2;
+            }
+
+            .review__item-date {
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+        }
 
         .rating {
             margin-right: 10px;
@@ -27,12 +59,23 @@
         font-size: 2rem;
         font-weight: 600;
         line-height: 1.6;
+
+        @media (max-width: 999px) {
+            font-size: 1.4rem;
+        }
     }
 
     &__item-date {
         font-size: 1.4rem;
         line-height: 1.3;
         color: #96afb1;
+
+        @media (max-width: 999px) {
+            font-size: 1.2rem;
+        }
+        @media (max-width: 576px) {
+            font-size: 1rem;
+        }
     }
 
     &__body {
@@ -43,6 +86,10 @@
 
         font-size: 1.5rem;
         line-height: 1.7;
+
+        @media (max-width: 999px) {
+            font-size: 1.2rem;
+        }
     }
 
     &__answer {
@@ -62,5 +109,16 @@
 
         border-radius: 4px;
         border: 1px solid #96afb1;
+
+        @media (max-width: 999px) {
+            width: 282px;
+            height: 43px;
+            font-size: 1.4rem;
+        }
+        @media (max-width: 576px) {
+            width: 251px;
+            height: 48px;
+            font-size: 1.6rem;
+        }
     }
 }
