--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -126,15 +126,42 @@
 
     &--other-goods {
         margin-bottom: 60px;
+
+        @media (max-width: 999px) {
+            margin-bottom: 40px;
+        }
+
         .section__content {
             position: relative;
+        }
+
+        .section__title {
+            @media (max-width: 999px) {
+                font-size: 2.4rem;
+            }
+            @media (max-width: 999px) {
+                font-size: 2.1rem;
+            }
         }
     }
     &--manufacturer-goods {
         margin-bottom: 96px;
 
+        @media (max-width: 999px) {
+            margin-bottom: 77px;
+        }
+
         .section__content {
             position: relative;
+        }
+
+        .section__title {
+            @media (max-width: 999px) {
+                font-size: 2.4rem;
+            }
+            @media (max-width: 999px) {
+                font-size: 2.1rem;
+            }
         }
     }
 
@@ -144,6 +171,10 @@
 
             font-size: 2.8rem;
             text-align: left;
+
+            @media (max-width: 999px) {
+                font-size: 2.4rem;
+            }
         }
     }
 
@@ -153,6 +184,8 @@
         .section__content {
             display: flex;
             gap: 10px;
+
+            overflow: auto;
         }
     }
 
@@ -161,6 +194,17 @@
 
         .section__content {
             position: relative;
+        }
+
+        .container--sm {
+            padding: 0;
+        }
+
+        .cards--mobile {
+            display: none;
+            @media (max-width: 576px) {
+                display: block;
+            }
         }
     }
 
