--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -187,6 +187,31 @@
 
             overflow: auto;
         }
+
+        .section__inner {
+            position: relative;
+        }
+
+        .decor {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            z-index: 1;
+
+            display: none;
+            width: 52px;
+            height: 100%;
+
+            background: linear-gradient(
+                270deg,
+                #e9f3f4 0%,
+                rgba(233, 243, 244, 0) 100%
+            );
+
+            @media (max-width: $md) {
+                display: block;
+            }
+        }
     }
 
     &--recommendations {
