--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -10,6 +10,7 @@
 
         @media (max-width: 576px) {
             font-size: 2.2rem;
+            margin-bottom: 5px;
         }
     }
 
@@ -20,18 +21,32 @@
         margin-bottom: 18px;
 
         color: #96afb1;
+
+        @media (max-width: 576px) {
+            margin-bottom: 7px;
+        }
     }
 
     &__details-rating {
         margin-right: 22px;
+
+        @media (max-width: 576px) {
+            margin-right: 3px;
+        }
     }
 
     &__details-art {
-        font-size: 1.4rem;
         margin-right: 45px;
+
+        font-size: 1.4rem;
+        white-space: nowrap;
 
         @media (max-width: 999px) {
             font-size: 1.2rem;
+        }
+        @media (max-width: 576px) {
+            margin-left: auto;
+            margin-right: 0;
         }
     }
 
@@ -158,6 +173,7 @@
 
         @media (max-width: 576px) {
             font-size: 2.8rem;
+            margin-right: 0;
         }
     }
 
@@ -170,6 +186,10 @@
 
         @media (max-width: 999px) {
             font-size: 1.4rem;
+        }
+        @media (max-width: 576px) {
+            font-size: 1.4rem;
+            font-weight: 300;
         }
     }
 
