--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
 
     max-width: 365px;
-    min-height: 642px;
+    // min-height: 642px;
 
     margin: 0 auto;
 
@@ -56,7 +56,7 @@
     }
 
     &--new {
-        min-height: 504px;
+        // min-height: 504px;
         max-width: 223px;
 
         @media (max-width: 999px) {
