--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -251,4 +251,49 @@
             }
         }
     }
+
+    &__label {
+        position: relative;
+
+        display: flex;
+        align-items: center;
+        gap: 14px;
+
+        margin-bottom: 13px;
+
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+    }
+
+    &__checkbox {
+        position: absolute;
+        inset: 0;
+        z-index: 1;
+
+        opacity: 0;
+
+        cursor: pointer;
+    }
+    &__checkbox:checked ~ &__checkmark {
+        border-color: #182d4d;
+        background-image: url('../img/icons/check-orange.svg');
+    }
+    /* Create a custom checkbox */
+    &__checkmark {
+        position: relative;
+
+        display: block;
+
+        width: 22px;
+        height: 22px;
+
+        background-size: 15px;
+        background-repeat: no-repeat;
+        background-position: center;
+        border-radius: 4px;
+        border: 2px solid #96afb1;
+
+        transition: 0.3s linear;
+    }
 }
