--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -233,6 +233,26 @@
         }
     }
 
+    &--catalog {
+        margin-bottom: 57px;
+        .section__header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .section__content {
+            // display: grid;
+            // grid-template-columns: 259px 1fr;
+            // grid-auto-rows: auto;
+            // gap: 40px;
+
+            display: flex;
+            align-items: flex-start;
+            gap: 40px;
+        }
+    }
+
     &__title {
         margin-bottom: 56px;
 
