--- a/src/scss/components/dropdown.scss
+++ b/src/scss/components/dropdown.scss
@@ -216,6 +216,52 @@
     }
 
     &--sort {
+        position: relative;
+
+        &.active .btn__icon {
+            svg {
+                transform: rotate(270deg);
+            }
+            svg path {
+                stroke: #e9f3f4;
+            }
+        }
+
+        .btn__icon {
+            svg {
+                transition: 0.3s linear;
+            }
+
+            svg path {
+                transition: 0.3s linear;
+            }
+        }
+        .dropdown__content {
+            top: 38px;
+            left: 0;
+
+            min-width: 169px;
+
+            padding: 10px 18px;
+            border: 2px solid #182d4d;
+            border-radius: 0 0 4px 4px;
+
+            &::after {
+                display: none;
+            }
+        }
+
+        .dropdown__list {
+            gap: 5px;
+        }
+
+        .dropdown__item-el {
+            gap: 0;
+
+            font-size: 1.6rem;
+            color: #182d4d;
+            line-height: 1.4;
+        }
     }
 
     &__list {
