--- a/src/scss/components/catalog.scss
+++ b/src/scss/components/catalog.scss
@@ -1,4 +1,15 @@
 .catalog {
+    @media (max-width: 999px) {
+        &__text {
+            font-size: 1.6rem;
+        }
+    }
+    @media (max-width: 576px) {
+        &__text {
+            font-size: 1.4rem;
+        }
+    }
+
     &__list {
         margin-bottom: 40px;
 
@@ -6,6 +17,15 @@
         grid-template-columns: repeat(4, 1fr);
         grid-auto-rows: auto;
         gap: 30px 20px;
+
+        @media (max-width: 1300px) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @media (max-width: 576px) {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px 11px;
+        }
     }
 
     .btn--xl {
