--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -242,14 +242,31 @@
         }
 
         .section__content {
-            // display: grid;
-            // grid-template-columns: 259px 1fr;
-            // grid-auto-rows: auto;
-            // gap: 40px;
-
             display: flex;
             align-items: flex-start;
             gap: 40px;
+        }
+
+        .section__controls {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 20px;
+        }
+
+        @media (max-width: 768px) {
+            .section__header {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 16px;
+
+                margin-bottom: 20px;
+            }
+
+            .section__title {
+                margin-bottom: 0;
+            }
         }
     }
 
