--- a/src/scss/components/sidebar.scss
+++ b/src/scss/components/sidebar.scss
@@ -1,5 +1,33 @@
 .sidebar {
-    max-width: 259px;
+    @media (max-width: 768px) {
+        display: none;
+
+        position: absolute;
+        inset: 0;
+
+        padding: 24px 18px;
+
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+        overflow: auto;
+
+        background-color: #e9f3f4;
+
+        z-index: 2;
+
+        .sidebar__inner {
+            margin: 0 auto;
+        }
+
+        &.active {
+            display: block;
+        }
+    }
+
+    &__inner {
+        max-width: 259px;
+    }
 
     &__block {
         margin-bottom: 40px;
@@ -24,8 +52,59 @@
     }
 
     &__title-icon {
+        position: relative;
+
         display: flex;
         align-items: center;
+
+        &:hover .sidebar__title-icon-popup {
+            opacity: 1;
+        }
+    }
+
+    &__title-icon-popup {
+        position: absolute;
+        top: 37px;
+        left: -36px;
+        z-index: 2;
+
+        width: 232px;
+        padding: 14px 18px;
+
+        pointer-events: none;
+
+        font-size: 1.2rem;
+        font-weight: 400;
+        color: #182d4d;
+        text-transform: none;
+        letter-spacing: 0.06em;
+        line-height: 1.4;
+
+        background-color: #fff;
+        border-radius: 4px;
+        box-shadow: 0px 0px 1px rgba(49, 70, 124, 0.25),
+            0px 0px 10px rgba(165, 172, 199, 0.4);
+
+        opacity: 0;
+
+        transition: 0.3s linear;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 3px;
+            left: 31px;
+            z-index: 1;
+
+            margin-top: -15px;
+            width: 0;
+            height: 0;
+
+            border-bottom: solid 15px #fff;
+            border-left: solid 15px transparent;
+            border-right: solid 15px transparent;
+            border-radius: 4px;
+        }
     }
 
     &__list {
