--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -270,6 +270,30 @@
         }
     }
 
+    &--manufacturers {
+        .card__list {
+            margin-bottom: 40px;
+
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 20px 18px;
+
+            @media (max-width: 1200px) {
+                grid-template-columns: repeat(4, 1fr);
+            }
+            @media (max-width: 999px) {
+                grid-template-columns: repeat(3, 1fr);
+            }
+            @media (max-width: 768px) {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        .show-more {
+            margin-bottom: 85px;
+        }
+    }
+
     &__title {
         margin-bottom: 56px;
 
