fix: manufacturers section title

--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -271,6 +271,10 @@
     }
 
     &--manufacturers {
+        .section__title {
+            text-align: left;
+            margin-bottom: 30px;
+        }
         .card__list {
             margin-bottom: 40px;
 
