--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -379,6 +379,91 @@
         background-color: #fff;
     }
 
+    &--review {
+        display: flex;
+        flex-direction: column;
+
+        padding: 30px 20px;
+
+        background-color: #f6feff;
+
+        @media (max-width: 999px) {
+            max-width: 100%;
+        }
+        @media (max-width: 576px) {
+            max-width: 100%;
+        }
+
+        .card__header {
+            margin-bottom: 18px;
+
+            display: flex;
+            gap: 10px;
+        }
+
+        .card__image {
+            width: 57px;
+            height: 57px;
+
+            background-color: #dee1ea;
+            border-radius: 50%;
+
+            overflow: hidden;
+
+            @media (max-width: 999px) {
+                width: 40px;
+                height: 40px;
+            }
+
+            img {
+                display: block;
+                max-width: 100%;
+                height: auto;
+            }
+        }
+
+        .card__header-text {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .card__name {
+            font-size: 2rem;
+            font-weight: 600;
+            line-height: 1.2;
+
+            @media (max-width: 999px) {
+                font-size: 1.6rem;
+            }
+        }
+
+        .card__date {
+            font-size: 1.4rem;
+            line-height: 1.3;
+            color: #96afb1;
+        }
+
+        .card__text {
+            line-height: 1.6;
+
+            max-height: 132px;
+
+            overflow: auto;
+
+            @media (max-width: 999px) {
+                font-size: 1.4rem;
+            }
+        }
+
+        .card__footer {
+            padding-top: 16px;
+
+            @media (max-width: 999px) {
+                font-size: 1.4rem;
+            }
+        }
+    }
+
     &__image-wrapper {
         position: relative;
 
