--- a/src/scss/components/rating.scss
+++ b/src/scss/components/rating.scss
@@ -87,6 +87,7 @@
 
         .rating__stars-icon {
             width: 23px;
+            height: 22px;
 
             @media (max-width: 999px) {
                 width: 10px;
