--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -304,6 +304,62 @@
         }
     }
 
+    &--reviews {
+        margin-bottom: 43px;
+
+        .section__title {
+            text-align: left;
+        }
+
+        .section__content {
+            display: flex;
+            gap: 49px;
+
+            @media (max-width: 768px) {
+                flex-direction: column;
+            }
+        }
+
+        .review {
+            flex-basis: 62%;
+            width: 100%;
+            max-width: 772px;
+        }
+
+        .review__list {
+            margin-bottom: 30px;
+        }
+
+        .review__answer {
+            padding-left: 130px;
+
+            @media (max-width: 999px) {
+                padding-left: 72px;
+            }
+            @media (max-width: 768px) {
+                padding-left: 30px;
+            }
+        }
+
+        .review__btn {
+            background-color: #f6feff;
+
+            @media (max-width: 999px) {
+                max-width: 228px;
+                height: 43px;
+
+                font-size: 1.4rem;
+            }
+            @media (max-width: 768px) {
+                width: 100%;
+                max-width: 100%;
+                height: 48px;
+
+                font-size: 1.6rem;
+            }
+        }
+    }
+
     &__title {
         margin-bottom: 56px;
 
