--- a/src/scss/components/tabs.scss
+++ b/src/scss/components/tabs.scss
@@ -11,6 +11,7 @@
             margin-bottom: 27px;
 
             padding: 5px;
+            align-items: center;
             gap: 10px;
 
             border-radius: 40px;
@@ -21,7 +22,8 @@
         }
 
         .tabs__btn {
-            width: 163px;
+            width: auto;
+            min-width: 163px;
             height: 40px;
             padding: 8px 16px;
 
@@ -47,6 +49,24 @@
 
             &:hover {
                 background-color: #f6feff;
+            }
+        }
+
+        .tabs__made {
+            margin-left: 125px;
+
+            font-size: 1.6rem;
+            color: #96afb1;
+            text-decoration: underline dotted;
+            white-space: nowrap;
+
+            @media (max-width: 999px) {
+                margin-left: 50px;
+                font-size: 1.4rem;
+            }
+            @media (max-width: 768px) {
+                margin-left: 50px;
+                font-size: 1.2rem;
             }
         }
 
